# HeightRidgeExtraction2D

./: CMakeLists.txt  height_ridge_extractor_2d.cc  height_ridge_extractor_2d.h  height_ridge_extractor_2d_test.cc  math.cc  math.h  ridge_visualizer.py  util.cc  util.h
data/: density_map.txt
